Eevee-Next Shadow Artifact #119565

Closed
opened 2024-03-16 17:56:47 +01:00 by Jan-Erik · 2 comments

System Information
Operating system: Linux-6.5.0-25-generic-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.146.02

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-14 23:27, hash: 2e6a8ae49c1c
Worked: (newest version of Blender that worked as expected)

Short description of error
This simple scene creates shadow artifacts(weird triangles)

Exact steps for others to reproduce the error
I booled a hole in a Sphere and created a soft ligth to shine through.

**System Information** Operating system: Linux-6.5.0-25-generic-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.146.02 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-14 23:27, hash: `2e6a8ae49c1c` Worked: (newest version of Blender that worked as expected) **Short description of error** This simple scene creates shadow artifacts(weird triangles) **Exact steps for others to reproduce the error** I booled a hole in a Sphere and created a soft ligth to shine through.
Jan-Erik added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-16 17:56:48 +01:00
Richard Antalik added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-16 20:14:37 +01:00
Philipp Oeser added the
Interest
EEVEE
label 2024-04-15 14:52:02 +02:00
Member

That now (in 411371aa54) seems fixed?

@JanErik , could you re-check in a fresh build from https://builder.blender.org/download/daily/ ?

That now (in 411371aa54) seems fixed? @JanErik , could you re-check in a fresh build from https://builder.blender.org/download/daily/ ?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Confirmed
labels 2024-04-15 14:55:59 +02:00
Author

@lichtwerk it is already much better, but not yet completely gone
grafik

the remaining actifacts get more invisible, the more I move the plane away from the sphere
grafik
grafik

@lichtwerk it is already much better, but not yet completely gone ![grafik](/attachments/4251b2d2-5e3f-4bd5-b992-1613d0fa830f) the remaining actifacts get more invisible, the more I move the plane away from the sphere ![grafik](/attachments/3bda0a62-8df0-4486-9e8b-ca21e19684e5) ![grafik](/attachments/cb9f9d3d-998f-4182-9cca-baa5808bf674)
Blender Bot added
Status
Resolved
and removed
Status
Needs Information from User
labels 2024-05-07 14:53:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119565
No description provided.