source/blender/draw/engines/eevee_next/shaders/eevee_shadow_tracing_lib.glsl
@@ -291,8 +291,11 @@ struct ShadowRayPunctual {
   /* Ray in tile-map normalized coordinates [0..1]. */
   vec3 origin;
   vec3 direction;
+  /* Up direction for the whole ray. Allows to compute depth gradient relative to a stable up
+   * direction that doesn't change between each cubeface. */
+  vec3 up_axis;
   /* Tile-map to sample. */
-  int tilemap_index;
+  int light_tilemap_index;
 };
 
 /* Return ray in UV clip space [0..1]. */
@@ -347,51 +350,52 @@ ShadowRayPunctual shadow_ray_generate_punctual(LightData light, vec2 random_2d, 
     vec3 point_on_light_shape = right * random_2d.x + up * random_2d.y;
 
     direction = point_on_light_shape - lP;
-    direction = shadow_ray_above_horizon_ensure(direction, lNg);
+    // direction = shadow_ray_above_horizon_ensure(direction, lNg);
 
     /* Clip the ray to not cross the light shape. */
     float clip_distance = light_spot_data_get(light).radius;
-    direction *= saturate((dist - clip_distance) / dist);
+    // direction *= saturate((dist - clip_distance) / dist);
   }
 
-  /* Apply shadow origin shift. */
-  vec3 local_ray_start = lP + projection_origin;
-  vec3 local_ray_end = local_ray_start + direction;
-
-  /* Use an offset in the ray direction to jitter which face is traced.
-   * This helps hiding some harsh discontinuity. */
-  int face_id = shadow_punctual_face_index_get(local_ray_start + direction * 0.5);
-  /* Local Light Space > Face Local (View) Space. */
-  vec3 view_ray_start = shadow_punctual_local_position_to_face_local(face_id, local_ray_start);
-  vec3 view_ray_end = shadow_punctual_local_position_to_face_local(face_id, local_ray_end);
-
-  /* Face Local (View) Space > Clip Space. */
-  /* TODO: Could be simplified since frustum is completely symmetrical. */
-  mat4 winmat = projection_perspective(
-      -clip_side, clip_side, -clip_side, clip_side, clip_near, clip_far);
-  vec3 clip_ray_start = project_point(winmat, view_ray_start);
-  vec3 clip_ray_end = project_point(winmat, view_ray_end);
-  /* Clip Space > UV Space. */
-  vec3 uv_ray_start = clip_ray_start * 0.5 + 0.5;
-  vec3 uv_ray_end = clip_ray_end * 0.5 + 0.5;
   /* Compute the ray again. */
   ShadowRayPunctual ray;
-  ray.origin = uv_ray_start;
-  ray.direction = uv_ray_end - uv_ray_start;
-  ray.tilemap_index = light.tilemap_index + face_id;
+  ray.origin = lP;
+  ray.direction = direction;
+  ray.light_tilemap_index = light.tilemap_index;
+  ray.up_axis = normalize(ray.origin);
+
+#ifdef GPU_FRAGMENT_SHADER
+  if (ivec2(gl_FragCoord.xy) == ivec2(500)) {
+    // drw_debug_line(ray.origin, ray.origin + ray.direction, vec4(0, 1, 0, 1));
+  }
+#endif
   return ray;
 }
 
 ShadowTracingSample shadow_map_trace_sample(ShadowMapTracingState state,
                                             inout ShadowRayPunctual ray)
 {
-  vec3 ray_pos = ray.origin + ray.direction * state.ray_time;
-  vec2 tilemap_uv = saturate(ray_pos.xy);
+  vec3 receiver_pos = ray.origin + ray.direction * state.ray_time;
+  int face_id = shadow_punctual_face_index_get(receiver_pos);
+  int tilemap_index = ray.light_tilemap_index + face_id;
+  vec3 face_pos = shadow_punctual_local_position_to_face_local(face_id, receiver_pos);
+  vec2 face_uv = saturate((face_pos.xy / abs(face_pos.z)) * 0.5 + 0.5);
+
+  float radial_occluder_depth = shadow_read_depth_at_tilemap_uv(tilemap_index, face_uv);
+  vec3 occluder_pos = receiver_pos * (radial_occluder_depth / length(receiver_pos));
 
   ShadowTracingSample samp;
-  samp.receiver_depth = ray_pos.z;
-  samp.occluder_depth = shadow_read_depth_at_tilemap_uv(ray.tilemap_index, tilemap_uv);
-  samp.skip_sample = (samp.occluder_depth == -1.0);
+  samp.receiver_depth = dot(receiver_pos, ray.up_axis);
+  samp.occluder_depth = dot(occluder_pos, ray.up_axis);
+  samp.skip_sample = (radial_occluder_depth == -1.0);
+#ifdef GPU_FRAGMENT_SHADER
+  if (ivec2(gl_FragCoord.xy) == ivec2(500)) {
+    drw_debug_point(receiver_pos, 0.01, vec4(0, 1, 0, 1));
+    drw_debug_point(occluder_pos, 0.01, vec4(1, 0, 0, 1));
+    drw_debug_line(
+        receiver_pos, receiver_pos + ray.up_axis * samp.occluder_depth, vec4(0, 1, 0, 1));
+  }
+#endif
   return samp;
 }
 
@@ -506,7 +510,7 @@ ShadowEvalResult shadow_eval(LightData light,
   vec2 pixel = vec2(gl_GlobalInvocationID.xy);
 #  endif
   vec3 blue_noise_3d = utility_tx_fetch(utility_tx, pixel, UTIL_BLUE_NOISE_LAYER).rgb;
-  vec3 random_shadow_3d = blue_noise_3d + sampling_rng_3D_get(SAMPLING_SHADOW_U);
+  vec3 random_shadow_3d = sampling_rng_3D_get(SAMPLING_SHADOW_U);
   vec2 random_pcf_2d = fract(blue_noise_3d.xy + sampling_rng_2D_get(SAMPLING_SHADOW_X));
 #else
   /* Case of surfel light eval. */
