source/blender/draw/engines/eevee_next/shaders/eevee_surf_lib.glsl
@@ -162,6 +162,12 @@ void shadow_viewport_layer_set(int view_id, int lod)
   gpu_ViewportIndex = lod;
 }
 
+vec3 shadow_position_vector_get(vec3 view_position)
+{
+  /* TODO(fclem): Orthographic. */
+  return view_position;
+}
+
 /* In order to support physical clipping, we pass a vector to the fragment shader that then clips
  * each fragment using a unit sphere test. This allows to support both point light and area light
  * clipping at the same time. */
